# academic-paper-rag

./: .gitignore  README.md
paper-rag/: .dockerignore  Dockerfile  config.yaml  docker-compose.yml  fix_cache.py  pyproject.toml  requirements.txt  run.py  startup.bat  startup.sh
paper-rag/.github/workflows/: ci.yml
paper-rag/app/: __init__.py  config.py  main.py  types.py
paper-rag/app/api/: analysis_routes.py  config.py  conversations.py  llm_client.py  paper_analyzer.py  routers.py
paper-rag/app/database/: __init__.py  conversations.py  papers.py  vector_store.py
paper-rag/app/frontend/: __init__.py  gradio_app.py
paper-rag/app/processing/: __init__.py  chunker.py  embeddings.py  pdf_parser.py
paper-rag/docker/: nginx.conf  start.sh
paper-rag/scripts/: download_models.py
paper-rag/tests/: conftest.py
paper-rag/tests/unit/: test_chunker.py  test_llm_client.py  test_pdf_parser.py  test_vector_store.py
