[project]
name = "paper-rag"
version = "1.0.0"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
